--- a/devII/src/app/footer/footer.component.scss
+++ b/devII/src/app/footer/footer.component.scss
@@ -63,4 +63,58 @@
       height: 180px;
     }
   }
+
+  @media screen and (max-width: 1120px) {
+    &-logo {
+      padding-left: 10px;
+      width: 25%;
+      img {
+        width: 150px;
+        height: 250px;
+      }
+    }
+
+    &-infos {
+      .geral {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .nome-campus {
+          font-size: 16px;
+        }
+
+        .endereco {
+          margin-left: 0px;
+          font-size: 12px;
+        }
+
+        .cep {
+          margin-left: 0px;
+          font-size: 12px;
+        }
+      }
+
+      .redes {
+        img {
+          width: 20px;
+          height: 20px;
+        }
+
+        img:not(:first-child) {
+          margin-left: 23px;
+        }
+      }
+    }
+
+    &-mec {
+      width: 18%;
+      padding-right: 20px;
+      
+      img {
+        height: 160px;
+      }
+    }
+  }
 }
