--- a/devII/src/app/header/header.component.scss
+++ b/devII/src/app/header/header.component.scss
@@ -32,7 +32,7 @@
     }
   }
 
-  &-itens{
+  &-itens {
     padding-right: 50px;
     width: 50%;
     height: 100%;
@@ -44,32 +44,10 @@
       display: flex;
       text-decoration: none;
       justify-content: space-between;
-  
-      .oportunidade {
-        margin-left: 25px;
-        color: #ffff;
-        font-size: 20px;
-        font-weight: bold;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-      }
-  
-      .enviarDocs {
-        margin-left: 25px;
-        color: #ffff;
-        font-size: 20px;
-        font-weight: bold;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-      }
-      .contato {
-        margin-left: 25px;
-        color: #ffff;
-        font-size: 20px;
-        font-weight: bold;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-      }
+
+      .oportunidade,
+      .enviarDocs,
+      .contato,
       .login {
         margin-left: 25px;
         color: #ffff;
@@ -81,4 +59,46 @@
     }
   }
 
+  @media screen and (max-width: 1120px) {
+    &-inicio {
+      padding-left: 30px;
+      align-items: center;
+
+      img {
+        width: 50px;
+      }
+
+      &-link {
+        text-decoration: none;
+
+        .titulo {
+          line-height: 10px;
+          margin-top: 25px;
+          color: #ffff;
+          font-size: 10px;
+          font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+            sans-serif;
+        }
+
+        .campus {
+          margin-left: 19px;
+          color: #ffff;
+          font-size: 25px;
+          font-weight: bold;
+          font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+            sans-serif;
+        }
+      }
+    }
+    &-itens {
+      &-menu {
+        .oportunidade,
+        .enviarDocs,
+        .contato,
+        .login {
+          font-size: 15px;
+        }
+      }
+    }
+  }
 }
