--- a/devII/src/app/footer/footer.component.scss
+++ b/devII/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-  box-shadow: 12px 12px 12px 9px rgba(0, 0, 0, 0.2);
+  background-color: #f8f9fa;
   height: 200px;
   width: 100%;
   display: flex;
@@ -12,7 +12,7 @@
   }
 
   &-infos {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,22 +22,18 @@
       .nome-campus {
         font-size: 20px;
         font-weight: bold;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
       }
 
+      .endereco,
+      .cep {
+        font-size: 16px;
+      }
       .endereco {
         margin-left: 55px;
-        font-size: 16px;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
       }
 
       .cep {
         margin-left: 115px;
-        font-size: 16px;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
       }
     }
 
@@ -59,6 +55,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
     img {
       height: 180px;
     }
@@ -68,9 +65,9 @@
     &-logo {
       padding-left: 10px;
       width: 25%;
+
       img {
-        width: 150px;
-        height: 250px;
+        width: 250px;
       }
     }
 
@@ -85,13 +82,17 @@
           font-size: 16px;
         }
 
-        .endereco {
+        .endereco,
+        .cep {
           margin-left: 0px;
           font-size: 12px;
         }
 
+        .endereco {
+          font-size: 12px;
+        }
+
         .cep {
-          margin-left: 0px;
           font-size: 12px;
         }
       }
@@ -110,10 +111,64 @@
 
     &-mec {
       width: 18%;
-      padding-right: 20px;
-      
+
       img {
         height: 160px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .footer {
+    margin: 0;
+    height: 150px;
+    width: 100%;
+
+    &-logo {
+      padding-left: 10px;
+      width: 25%;
+
+      img {
+        width: 155px;
+      }
+    }
+
+    &-infos {
+      .geral {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .nome-campus {
+          font-size: 14px;
+        }
+
+        .endereco,
+        .cep {
+          margin-left: 0px;
+          font-size: 11px;
+        }
+      }
+
+      .redes {
+        img {
+          width: 20px;
+          height: 20px;
+        }
+
+        img:not(:first-child) {
+          margin-left: 23px;
+        }
+      }
+    }
+
+    &-mec {
+      width: 18%;
+      padding-right: 20px;
+
+      img {
+        height: 120px;
       }
     }
   }
