Começando tela upload/download

--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <p>componentes aqui!</p>
+    <app-analise-docs/>
   </div>
   <app-footer />
 </div>
