--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <p>componentes aqui!</p>
+    <router-outlet></router-outlet>
   </div>
   <app-footer />
 </div>
-  
+
 
