--- a/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
+++ b/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
@@ -19,36 +19,39 @@
         <option value="Noite">Noite</option>
       </select>
 
+      <ul>
+        <li style="padding-right: 39px;">
+          <label for="matricula">Matrícula</label>
+          <input type="text" id="matricula" name="matricula" [(ngModel)]="aluno.matricula" placeholder="Matrícula" required>
+        </li>
 
-      <label for="matricula">Matrícula</label>
-      <input type="text" id="matricula" name="matricula" [(ngModel)]="aluno.matricula" placeholder="Matrícula" required>
-
-      <label for="ingresso">Ingresso</label>
-      <input type="text" id="ingresso" name="ingresso" [(ngModel)]="aluno.ingresso" placeholder="1/2023" required>
+        <li>
+          <label for="ingresso">Ingresso</label>
+          <input type="text" id="ingresso" name="ingresso" [(ngModel)]="aluno.ingresso" placeholder="1/2023" required>
+        </li>
+      </ul>
 
       <label for="curso">Curso</label>
       <input type="text" id="curso" name="curso" [(ngModel)]="aluno
       .curso" placeholder="Curso" required>
 
       <div class="senhadiv">
-      <label class="nome-campo">Digite uma senha</label>
+        <ul>
+          <li style="padding-right: 39px;">
+          <label class="nome-campo">Digite uma senha</label>
 
-      <input class="senha" type="text" id="lname" name="lname" value="Digite uma senha" [(ngModel)]="aluno.usuarioSistema.senha" placeholder="Senha" required>
+          <input class="senha" type="text" id="lname" name="lname" value="Digite uma senha" [(ngModel)]="aluno.usuarioSistema.senha" placeholder="Senha" required>
+          </li>
 
+          <li>
+          <label class="nome-campo">Confirmar senha</label>
 
-      <label class="nome-campo">Confirmar senha</label>
-
-      <input class="senha" type="text" id="lname" name="lname" value="Confirmar senha" placeholder="Confirmar Senha" required>
+          <input class="senha" type="text" id="lname" name="lname" placeholder="Confirmar Senha" required>
+        </li>
+        </ul>
       </div>
 
       <input class="botao" type="submit" value="Cadastrar">
     </div>
   </form>
 </div>
-
-<!-- <form (ngSubmit)="enviarFormulario()">
-
-
-
-  <button type="submit">Enviar</button>
-</form> -->
