--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <router-outlet></router-outlet>
+    <router-outlet />
   </div>
   <app-footer />
 </div>
-
-
