--- a/devII/src/app/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/formulario-servidor/formulario-servidor.component.html
@@ -3,26 +3,42 @@
 </div>
 
 <div class="formulario">
-    <form class="formulario--centro">
-        <div class="formulario--gp">
-            <label class="nome-campo">Cargo:</label>
-            <select id="cargo" required name="cargo" class="cargo">
-                <option value=""></option>
-                <option value="1">Coordenador</option>
-                <option value="2">Setor de Estágio</option>
-                <option value="3">Diretor</option>
-            </select>
+    <form class="formulario--centro" (ngSubmit)="enviarFormulario()">
+      <div class="formularioBox">
+
+        <div class="divcargo">
+          <label for="cargo">Cargo</label>
+          <select id="cargo" name="cargo" [(ngModel)]="servidor.cargo" class="text" required>
+              <option value="">Selecione o Cargo</option>
+              <option value="Coordenador">Coordenador</option>
+              <option value="Setor de Estágio">Setor de Estágio</option>
+              <option value="Diretor">Diretor</option>
+          </select>
         </div>
-        <label class="nome-campo">Nome Completo:</label>
-        <input required class="nome" type="text" id="nome" name="nome" placeholder="Digite o seu nome">
-        <label class="nome-campo">Email institucional:</label>
-        <input required class="email" type="email" id="email" name="email" value="" placeholder="@restinga.ifrs.edu.br">
-        <label class="nome-campo">Digite uma senha:</label>
-        <input required class="senha" type="password" id="password" name="password" value=""
-            placeholder="Digite a senha">
-        <label class="nome-campo">Confirmar senha:</label>
-        <input required class="senha" type="password" id="Confirm_password" name="Confirm_password" value=""
-            placeholder="Digite novamente a Senha">
+
+        <label class="nome-campo">Nome Completo</label>
+        <input class="nome" type="text" id="nome" name="nome" [(ngModel)]="servidor.nome" placeholder="Digite o seu nome" required>
+
+        <label class="nome-campo">Email institucional</label>
+        <input class="email" type="email" id="email" name="email" [(ngModel)]="servidor.usuarioSistema.email" placeholder="servidor@restinga.ifrs.edu.br" required>
+
+        <div class="senhadiv">
+          <ul>
+            <li style="padding-right: 39px;">
+              <label class="nome-campo">Digite uma senha</label>
+              <input class="senha" type="password" id="password" name="password" [(ngModel)]="servidor.usuarioSistema.senha"
+                  placeholder="Digite a senha" required>
+            </li>
+
+            <li>
+              <label class="nome-campo">Confirmar senha</label>
+              <input  class="senha" type="password" id="Confirm_password" name="Confirm_password"
+                placeholder="Digite novamente a Senha" required>
+            </li>
+          </ul>
+        </div>
+
         <input class="botao" type="submit" value="Cadastrar">
+      </div>
     </form>
 </div>
