--- a/devII/src/app/login/login.component.html
+++ b/devII/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper">
   <div class="corpo">
-    <form >
+    <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
       <div class="image-container">
         <img src="assets/img/imgLogin.png" alt="imagem login">
       </div>
-      <input type="email" id="email" [(ngModel)]="email"  placeholder="email" name="email" required >
-      <input type="password" id="senha" [(ngModel)]="password" required placeholder="senha" name="senha" required>
+      <input type="email" id="email" formControlName="email" placeholder="email" name="email" required >
+      <input type="password" id="senha" formControlName="senha" placeholder="senha" name="senha" required>
       <div class="buttons">
-        <button type="submit" (click)="login()">Acessar</button>
+        <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
         <button type="button" (click)="cadatrar()">Cadastrar</button>
       </div>
     </form>
