--- a/devII/src/app/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/formulario-servidor/formulario-servidor.component.html
@@ -22,6 +22,9 @@
         <label class="nome-campo">Email institucional</label>
         <input class="email" type="email" id="email" name="email" [(ngModel)]="servidor.usuarioSistema.email" placeholder="servidor@restinga.ifrs.edu.br" required>
 
+        <label class="nome-campo">curso</label>
+        <input class="curso" type="text" id="curso" name="curso" [(ngModel)]="servidor.curso" placeholder="Digite o seu curso" required>
+
         <div class="senhadiv">
           <ul>
             <li style="padding-right: 39px;">
