--- a/devII/src/app/analise-docs/analise-docs.component.html
+++ b/devII/src/app/analise-docs/analise-docs.component.html
@@ -40,7 +40,7 @@
         <p class='titulo'>Upload de Documentos</p>
         <div class="arquivos-up">
           <input type="file" id="avatar" name="avatar" multiple #fileInput>
-          <button mat-raised-button (click)="upload()">Upload</button>
+          <button mat-raised-button (click)="upload()">Salvar</button>
         </div>
         <div class="proximo">
           <button mat-button matStepperPrevious>Voltar</button>
