--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -14,7 +14,7 @@
   <div class="navbar-itens">
     <a class="navbar-itens-menu" routerLink="">
       <a>Oportunidades</a>
-      <a routerLink="/cadastro">Enviar documentos</a>
+      <a routerLink="/cadastro">Cadastrar servidor</a>
       <a routerLink="/analisedocs">Analise Documentos</a>
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
       <a (click)="logout()" *ngIf="isAuthenticated">Logout</a>
