--- a/devII/src/app/login/login.component.html
+++ b/devII/src/app/login/login.component.html
@@ -8,7 +8,7 @@
       <input type="password" id="senha" formControlName="senha" placeholder="senha" name="senha" required>
       <div class="buttons">
         <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
-        <button type="button" (click)="cadatrar()">Cadastrar</button>
+        <button type="button" routerLink="/cadastrarAluno">Cadastrar</button>
       </div>
     </form>
   </div>
