--- a/devII/src/app/core/components/header/header.component.scss
+++ b/devII/src/app/core/components/header/header.component.scss
@@ -42,6 +42,7 @@
       justify-content: space-between;
 
       > a {
+        text-decoration: none;
         margin-left: 25px;
         color: #ffff;
         font-size: 20px;
