--- a/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
+++ b/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
@@ -6,10 +6,10 @@
   <form (ngSubmit)="enviarFormulario()" class="formulario--centro">
       <div class="formularioBox">
       <label class="nome-campo">Nome Completo</label>
-      <input class="nome" type="text" id="fname" name="fname" [(ngModel)]="aluno.nomeCompleto" placeholder="Nome Completo">
+      <input class="nome" type="text" name="fname" [(ngModel)]="aluno.nomeCompleto" placeholder="Nome Completo">
 
       <label class="nome-campo">Email institucional</label>
-      <input class="email" type="text" id="fname" name="fname" [(ngModel)]="aluno.usuarioSistema.email" placeholder="aluno@restinga.ifrs.edu.br">
+      <input class="email" type="text" name="fname" [(ngModel)]="aluno.usuarioSistema.email" placeholder="aluno@restinga.ifrs.edu.br">
 
       <label for="turno">Turno</label>
       <select id="turno" name="turno" type="text" [(ngModel)]="aluno.turno" required>
@@ -40,13 +40,13 @@
           <li style="padding-right: 39px;">
           <label class="nome-campo">Digite uma senha</label>
 
-          <input class="senha" type="text" id="lname" name="lname" value="Digite uma senha" [(ngModel)]="aluno.usuarioSistema.senha" placeholder="Senha" required>
+          <input class="senha" type="password" name="lname" [(ngModel)]="aluno.usuarioSistema.senha" placeholder="Senha" required>
           </li>
 
           <li>
           <label class="nome-campo">Confirmar senha</label>
 
-          <input class="senha" type="text" id="lname" name="lname" placeholder="Confirmar Senha" required>
+          <input class="senha" type="password" name="lname" [(ngModel)]="confirmarSenha" placeholder="Confirmar Senha" required>
         </li>
         </ul>
       </div>
