--- a/devII/src/app/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/formulario-servidor/formulario-servidor.component.html
@@ -29,14 +29,12 @@
           <ul>
             <li style="padding-right: 39px;">
               <label class="nome-campo">Digite uma senha</label>
-              <input class="senha" type="password" id="password" name="password" [(ngModel)]="servidor.usuarioSistema.senha"
-                  placeholder="Digite a senha" required>
+              <input class="senha" type="password" id="password" name="password" [(ngModel)]="servidor.usuarioSistema.senha" placeholder="Digite a senha" required>
             </li>
 
             <li>
               <label class="nome-campo">Confirmar senha</label>
-              <input  class="senha" type="password" id="Confirm_password" name="Confirm_password"
-                placeholder="Digite novamente a Senha" required>
+              <input  class="senha" type="password" id="Confirm_password" name="Confirm_password" [(ngModel)]="confirmarSenha" placeholder="Digite novamente a Senha" required>
             </li>
           </ul>
         </div>
