--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <app-lista-solicitacoes-aluno></app-lista-solicitacoes-aluno>
 
   </div>
   <app-footer />
