--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <!-- <router-outlet></router-outlet> -->
-    <app-lista-solicitacoes-aluno></app-lista-solicitacoes-aluno>
+     <router-outlet></router-outlet> 
+    <!-- <app-lista-solicitacoes-aluno></app-lista-solicitacoes-aluno> -->
 
   </div>
   <app-footer />
