--- a/devII/src/app/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
+++ b/devII/src/app/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
@@ -1,23 +1,15 @@
 <div class="tituloprincipal">
   <span>Lista de Solicitações</span>
   <span class="cardDecoracao1"></span>
-</div>
 
-<div class="espacamento">
-  <div class="card">
-   <div class="header">
-      <span>Estágio</span>
-      <div>
-        <span>Status</span>
-        <span class="retangulo">Em andamento</span>
-      </div>
-   </div>
-
-   <div class="titulo">
-    <span>Lorem ipsum dolor</span>
-    <span class="cardDecoracao2"></span>
-   </div>
-
-
+  <div class="solicitacao" *ngIf="listaSolicitacoes.length > 0, else semSolicitacoes">
+    <div *ngFor="let solicitacao of listaSolicitacoes">
+      <app-solicitacao [solicitacao]="solicitacao"></app-solicitacao>
+    </div>
   </div>
 </div>
+<ng-template #semSolicitacoes>
+  <div class="semSolicitacoes">
+    <p>Você nao tem solicitações</p>
+  </div>
+</ng-template>
