--- a/devII/src/app/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.scss
+++ b/devII/src/app/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.scss
@@ -1,61 +1,31 @@
-.espacamento{
+.solicitacao{
   display: grid;
-  place-items: center;
-  height: 35vh;
+  // place-items: center;
+  // height: 35vh;
+  margin-top: 20px;
 }
 
 .tituloprincipal{
-  font-size: 25px;
+  font-size: 28px;
+  font-weight: bold;
   color: #000000;
   display: grid;
   padding: 2%;
 }
+
 .cardDecoracao1{
-  width: 181px;
+  width: 264px;
   height: 3px;
   left: 123px;
   top: 314px;
   background-color: #2B923C;
   border: 1px solid #2B923C;
+  margin-top: 6px;
 }
 
-.card{
-  width: 90%;
-  height: 100%;
-  left: 110px;
-  top: 421px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.header{
+.semSolicitacoes{
   display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-.retangulo {
-  color: #FFFFFF;
-  background-color: #6A737B;
-  border: 1px solid #ccc;
-  margin-left: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.titulo{
-  display: grid;
-  padding-left: 10px;
-  font-size: 20px;
-}
-
-.cardDecoracao2{
-  width: 99px;
-  height: 1px;
-  left: 123px;
-  top: 314px;
-  border: 1px solid #2B923C;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3%;
 }
