modified:   devII/src/app/app-routing.module.ts 	modified:   devII/src/app/app.component.html

--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <app-lista-solicitacoes-servidor/>
+
+    <router-outlet></router-outlet>
+    <!-- <app-lista-solicitacoes-servidor/> -->
 
   </div>
   <app-footer />
