--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -16,6 +16,7 @@
       <a>Oportunidades </a>
       <a routerLink="/cadastrarServidor">Cadastrar servidor</a>
       <a routerLink="/analisedocs">Analise Documentos</a>
+      <a routerLink="/solicitacaoEstagio">Solicitação</a>
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
       <a (click)="logout()" *ngIf="isAuthenticated">Logout</a>
     </a>
