--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-     <router-outlet></router-outlet>
+    <app-solicitacao-servidor/>
+    <router-outlet></router-outlet>
+
+     
 
   </div>
   <app-footer />
