--- a/devII/src/app/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/analise-docs/analise-docs.component.scss
@@ -1,5 +1,5 @@
 .corpo {
-  padding: 30px 0 0 200px;
+  padding: 30px 100px 0 200px;
 
   &-titulo {
     width: 370px;
@@ -55,10 +55,34 @@
       }
     }
   }
+  &-setor-estagio {
+    padding-top: 30px;
+    width: 100%;
+    height: 100%;
+
+    .download {
+      display: flex;
+      align-items: center;
+
+      p {
+        font-size: 20px;
+      }
+      .button {
+        margin-left: 15px;
+      }
+    }
+    .botoes {
+      margin-top: 20px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-around;
+    }
+  }
 
   &-passos {
     width: 85%;
-
 
     .titulo {
       font-size: 20px;
@@ -96,7 +120,6 @@
       display: flex;
       justify-content: flex-end;
       padding: 20px 0;
-
     }
 
     .finalizar {
@@ -108,5 +131,4 @@
       }
     }
   }
-
 }
