new file:   devII/src/app/analise-docs/aluno.model.ts 	new file:   devII/src/app/analise-docs/aluno.service.ts 	modified:   devII/src/app/analise-docs/analise-docs.component.ts 	modified:   devII/src/app/app-routing.module.ts 	modified:   devII/src/app/app.component.html 	new file:   devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/dados-backend.service.spec.ts 	new file:   devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/dados-backend.service.ts 	modified:   devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.html 	modified:   devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.scss 	modified:   devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.ts 	modified:   devII/src/app/lista-solicitacoes-servidor/solicitacao/solicitacao.component.spec.ts

--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
   <app-header />
   <div class="corpo">
-    <app-solicitacao-servidor/>
+    <!-- <app-solicitacao-servidor/> para testar se a lista está ok-->
+
     <router-outlet></router-outlet>
 
      
