--- a/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -61,5 +61,9 @@
     <button (click)="closeDialog()">Fechar</button>
    </div>
 
+   <div class="buttonSolicitar">
+    <button (click)="AnaliseDoc()">Página da Solicitação</button>
+   </div>
+
   </div>
 </div>
