--- a/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -106,6 +106,14 @@ span {
 
 }
 
+.buttonSolicitar{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  padding: 16px;
+
+}
+
 button{
   padding-left: 2%;
   padding-right: 2%;
