--- a/devII/src/app/analise-docs/analise-docs.component.html
+++ b/devII/src/app/analise-docs/analise-docs.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div></div>
-  <div class="corpo-setor-estagio" *ngIf="">
+  <div class="corpo-setor-estagio" *ngIf="false">
     <div class="download">
       <p>Download dos Arquivos</p>
       <div class="historico" *ngFor="let doc of documentList$ | async">
@@ -34,8 +34,20 @@
       </div>
     </div>
     <div class="botoes">
-      <button class="deferir" mat-raised-button color="primary">Deferir</button>
-      <button class="indeferir" mat-raised-button color="warn">
+      <button
+        class="deferir"
+        mat-raised-button
+        color="primary"
+        (click)="abrirDialogDeferir()"
+      >
+        Deferir
+      </button>
+      <button
+        class="indeferir"
+        mat-raised-button
+        color="warn"
+        (click)="abrirDialogIndeferir()"
+      >
         Indeferir
       </button>
     </div>
@@ -65,5 +77,23 @@
         </div>
       </mat-step>
     </mat-stepper>
+    <div class="botoes">
+      <button
+        class="deferir"
+        mat-raised-button
+        color="primary"
+        (click)="abrirDialogDeferir()"
+      >
+        Deferir
+      </button>
+      <button
+        class="indeferir"
+        mat-raised-button
+        color="warn"
+        (click)="abrirDialogIndeferir()"
+      >
+        Indeferir
+      </button>
+    </div>
   </div>
 </div>
