--- a/devII/src/app/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/analise-docs/analise-docs.component.scss
@@ -130,5 +130,14 @@
         margin-left: 200px;
       }
     }
+
+    .botoes {
+      margin-top: 20px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-around;
+    }
   }
 }
