alterações lista-servidor

--- a/devII/src/app/analise-docs/analise-docs.component.html
+++ b/devII/src/app/analise-docs/analise-docs.component.html
@@ -7,7 +7,7 @@
       <span class="dados">Dados do Aluno</span>
     </div>
     <div class="nome-aluno">
-      <span>Nome: João Silva</span>
+      <span>Nome:{{ solicitacao?.titulo }} </span>
       <span class="curso">Tipo de Estágio: Não Obrigatório</span>
     </div>
 
