--- a/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/lista-solicitacoes-servidor/solicitacao/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -2,7 +2,7 @@
   <div class="card">
    <div class="header">
     <div class="titulo">
-      <span>{{solicitacao.titulo}}</span>
+      <span>Solicitação de: {{solicitacao.aluno.nomeCompleto}}</span>
       <span class="cardDecoracao"></span>
      </div>
 
