--- a/devII/src/app/lista-solicitacoes-servidor/solicitacao/solicitacao.component.html
+++ b/devII/src/app/lista-solicitacoes-servidor/solicitacao/solicitacao.component.html
@@ -9,7 +9,7 @@
    </div>
 
    <div class="titulo">
-    <span>{{solicitacao.titulo}}</span>
+    <span>Solicitação de: {{solicitacao.aluno.nomeCompleto}}</span>
     <span class="cardDecoracao2"></span>
    </div>
 
