Front Mural de Vagas

--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -13,7 +13,7 @@
 
   <div class="navbar-itens">
     <a class="navbar-itens-menu">
-      <a>Oportunidades </a>
+      <a routerLink="/muralVagas">Oportunidades </a>
       <a routerLink="/cadastrarServidor">Cadastrar servidor</a>
       <a routerLink="/analisedocs">Analise Documentos</a>
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
