--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -13,10 +13,10 @@
 
   <div class="navbar-itens">
     <a class="navbar-itens-menu">
-      <a>Oportunidades </a>
+      <a routerLink="/muralVagas">Oportunidades </a>
       <a routerLink="/cadastrarServidor">Cadastrar servidor</a>
       <a routerLink="/analisedocs">Analise Documentos</a>
-      <a routerLink="/solicitacaoEstagio">Solicitação</a>
+      <a routerLink="/listaSolicitacoesAluno">Solicitações</a>
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
       <a (click)="logout()" *ngIf="isAuthenticated">Logout</a>
     </a>
