--- a/devII/src/app/analise-docs/analise-docs.component.html
+++ b/devII/src/app/analise-docs/analise-docs.component.html
@@ -2,23 +2,23 @@
   <div class="corpo-titulo">
     <span>Análise de Documentos</span>
   </div>
-  <div class="corpo-dados">
+  <div class="corpo-dados" *ngIf="alumniData$ | async as alumniData">
     <div class="subtitulo">
       <span class="dados">Dados do Aluno</span>
     </div>
     <div class="nome-aluno">
-      <span>Nome: {{solicitacao?.aluno?.nomeCompleto}}</span>
+      <span>Nome: {{alumniData.nomeCompleto}}</span>
       <span class="curso">Tipo de Estágio: Não Obrigatório</span>
     </div>
 
     <div class="infos-aluno">
-      <span>Matricula: {{solicitacao?.aluno?.matricula}}</span>
-      <span>Ano: {{solicitacao?.aluno?.ingresso}}</span>
-      <span>Turno: {{solicitacao?.aluno?.turno}}</span>
+      <span>Matricula: {{alumniData.matricula}}</span>
+      <span>Ano: {{alumniData.ingresso | date : 'dd/MM/YYYY' }}</span>
+      <span>Turno: {{alumniData.turno}}</span>
     </div>
     <div class="curso-aluno">
       <span>Tipo de Curso: Superior</span>
-      <span>Curso: {{solicitacao?.aluno?.curso}}</span>
+      <span>Curso: {{alumniData.curso.nomeCurso}}</span>
       <span>Semestre: 2</span>
     </div>
   </div>
@@ -55,7 +55,7 @@
   <div class="corpo-passos">
     <mat-stepper>
       <mat-step label="Download" state="phone">
-        <p class="titulo">Download de Documentos</p>
+        <p class="titulo" *ngIf="documentList$ | async as docsData" >Download de Documentos</p>
         <div class="historico" *ngFor="let doc of documentList$ | async">
           <p class="arquivo">{{doc.nome}}</p>
           <button mat-icon-button color="primary" (click)="download(doc)">
@@ -70,8 +70,6 @@
         <p class="titulo">Upload de Documentos</p>
         <div class="arquivos-up">
           <input type="file" id="avatar" name="avatar" multiple #fileInput />
-
-          <button mat-raised-button (click)="upload()">Salvar</button>
         </div>
         <div class="proximo">
           <button mat-button matStepperPrevious>Voltar</button>
