--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -17,8 +17,14 @@
       <a routerLink="/cadastrarServidor" *permission="Roles.ROLE_SERVIDOR"
         >Cadastrar servidor</a
       >
-      <a routerLink="/analisedocs">Analise Documentos</a>
-      <a routerLink="/listaSolicitacoesAluno">Solicitações</a>
+      <a
+        routerLink="/listaSolicitacoesServidor"
+        *permission="Roles.ROLE_SERVIDOR"
+        >Lista Solicitações</a
+      >
+      <a routerLink="/listaSolicitacoesAluno" *permission="Roles.ROLE_ALUNO"
+        >Solicitações</a
+      >
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
       <a (click)="logout()" *ngIf="isAuthenticated">Logout</a>
     </a>
