--- a/devII/src/app/formulario-servidor/formulario-servidor.component.scss
+++ b/devII/src/app/formulario-servidor/formulario-servidor.component.scss
@@ -11,6 +11,17 @@
     }
 }
 
+
+#curso{
+  box-sizing: border-box;
+  padding: 7px;
+  font-size: 18px;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+
 .formulario {
   display: flex;
   justify-content: center;
