--- a/devII/src/app/tela-solicitacao/tela-solicitacao.component.html
+++ b/devII/src/app/tela-solicitacao/tela-solicitacao.component.html
@@ -12,8 +12,8 @@
     <label for="tipo">Tipo:</label>
     <select name="tipo" [(ngModel)]="solicitacao.tipo">
       <option value="" disabled>Escolha um tipo</option>
-      <option value="estagio">Estágio</option>
-      <option value="bolsa">Bolsa</option>
+      <option value="obrigatório">Estágio obrigatório</option>
+      <option value="Não obrigatório">Estágio não obrigatório</option>
     </select>
 
   <label for="id">Seu ID: </label>
