--- a/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.scss
+++ b/devII/src/app/formulario-cadastro-aluno/formulario-cadastro-aluno.component.scss
@@ -56,6 +56,17 @@ input {
   margin-bottom: 30px;
 }
 
+#curso{
+  box-sizing: border-box;
+
+  padding: 7px;
+  font-size: 18px;
+
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
 div .formularioBox{
   display: grid;
 }
