--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
@@ -1,7 +1,8 @@
 .corpo {
-  padding: 30px 100px 0 200px;
+  padding: 20px 100px 0 200px;
 
   &-titulo {
+    margin-top: 15px;
     width: 370px;
 
     span {
