add Setor de Estágio na seleção de curso

--- a/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
@@ -30,6 +30,7 @@
           <option value="12">Eletrônica Industrial</option>
           <option value="13">Gestão Desportiva e de Lazer</option>
           <option value="14">Processos Gerenciais</option>
+          <option value="15">Setor de Estágio</option>
         </select>
 
         <div class="senhadiv">
