--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -1,4 +1,4 @@
-<div class="corpo">
+<div class="corpo" xmlns="http://www.w3.org/1999/html">
   <div class="corpo-titulo">
     <span>Análise de Documentos</span>
   </div>
@@ -18,16 +18,53 @@
     </div>
     <div class="curso-aluno">
       <span>Tipo de Curso: Superior</span>
-      <span>Curso: {{alumniData.curso.nomeCurso}}</span>
+      <span >Curso: <b>{{alumniData.curso.nomeCurso}}</b></span>
       <span>Semestre: 2</span>
     </div>
   </div>
-  <div></div>
+
+  <div>
+    <div>
+      <div class="corpo-dados-etapas" *ngIf="alumniData$ | async as alumniData">
+        <div class="subtitulo">
+          <span class="dados">Histórico de Etapas</span>
+        </div>
+        <div class="etapa">
+          <span class="dados"><b>Etapa</b></span>
+          <span class="dados"><b>Email</b></span>
+          <span class="dados"><b>Data</b></span>
+        </div>
+        <div class="etapa">
+          <span>Etapa 2:</span>
+          <span class="email">{{alumniData.email}}</span>
+          <span class="data">{{alumniData.data}}</span>
+        </div>
+        <div class="etapa">
+          <span>Etapa 3:</span>
+          <span class="email">{{alumniData.email}}</span>
+          <span class="data">{{alumniData.data}}</span>
+        </div>
+        <div class="etapa">
+          <span>Etapa 4:</span>
+          <span class="email">{{alumniData.email}}</span>
+          <span class="data">{{alumniData.data}}</span>
+        </div>
+        <div class="etapa">
+          <span>Etapa 5:</span>
+          <span class="email">{{alumniData.email}}</span>
+          <span class="data">{{alumniData.data}}</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
   <div class="corpo-setor-estagio" *ngIf="false">
     <div class="download">
       <p>Download dos Arquivos</p>
       <div class="historico" *ngFor="let doc of documentList$ | async">
         <p class="arquivo">{{ doc.nome }}</p>
+        <label for="data">Data</label>
+        <input type="text" id="data" [(ngModel)]="doc.data" placeholder="Data" />
         <button mat-icon-button color="primary" (click)="download(doc)">
           <mat-icon class="salvar">save_alt</mat-icon>
         </button>
