--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -2,7 +2,7 @@
   <div class="card">
    <div class="header">
     <div class="titulo">
-      <span>Solicitação de: {{solicitacao.aluno.nomeCompleto}}</span>
+      <span>Solicitação de: {{solicitacao.aluno.nomeCompleto}}  </span>
       <span class="cardDecoracao"></span>
      </div>
 
@@ -50,7 +50,7 @@
    </div>
 
    <div class="cardConteudo">
-    <span>{{solicitacao.conteudo}}</span>
+    <span>{{ solicitacao.data_solicitacao.toLocaleDateString() }} </span>
    </div>
 
    <div class="observacao">
@@ -61,9 +61,7 @@
     <button (click)="closeDialog()">Fechar</button>
    </div>
 
-   <div class="buttonSolicitar">
-    <button (click)="AnaliseDoc()">Página da Solicitação</button>
-   </div>
+   
 
   </div>
 </div>
