--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
@@ -19,8 +19,9 @@
     <form (ngSubmit)="filtrarPorStatus()">
       <select [(ngModel)]="filtroStatus" name="filtroStatus">
         <option value="todas">Todas</option>
-        <option value="deferidas">Deferidas</option>
-        <option value="indeferidas">Indeferidas</option>
+        <option value="aprovado">Deferidas</option>
+        <option value="negado">Indeferidas</option>
+        <option value="em andamento">Em andamento</option>
         <option value="setor_estagios">Setor de Estágios</option>
         <option value="coordenador">Coordenador</option>
         <option value="diretoria">Diretoria</option>
