--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
@@ -1,10 +1,8 @@
-.espacamento{
+.espacamento {
   margin-bottom: 25px;
 }
 
-
-.card{
-  // width: 90%;
+.card {
   height: 100%;
   left: 110px;
   top: 421px;
@@ -14,7 +12,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   padding: 16px;
@@ -31,14 +29,14 @@
   padding-right: 10px;
 }
 
-.titulo{
+.titulo {
   display: grid;
   padding-left: 16px;
   font-size: 20px;
   font-weight: bold;
 }
 
-.cardDecoracao2{
+.cardDecoracao2 {
   width: 99px;
   height: 1px;
   left: 123px;
@@ -46,21 +44,30 @@
   border: 1px solid #2B923C;
 }
 
-.cardConteudo{
+.cardConteudo {
   margin-top: 15px;
   margin-left: 16px;
   font-size: 21px;
   margin-right: 10%;
 }
 
-.buttonDetalhes{
+.buttonContainer {
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: space-between;
   padding: 16px;
-
 }
 
-button{
+.buttonDetalhes {
+  display: flex;
+  padding-right: 8px;
+}
+
+.buttonGerenciar {
+  display: flex;
+  padding-left: 8px;
+}
+
+button {
   padding-left: 2%;
   padding-right: 2%;
   background: #2B923C;
@@ -71,14 +78,14 @@ button{
   cursor: pointer;
 }
 
-.statusColor1{
+.statusColor1 {
   background-color: #2B923C;
 }
 
-.statusColor2{
+.statusColor2 {
   background-color: #5699ea;
 }
 
-.statusColor3{
+.statusColor3 {
   background-color: #CB0606;
 }
